// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrossIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.837 8l-2.45-2.464 1.17-1.17 2.45 2.464 2.465-2.465 1.17 1.17L9.162 8l2.48 2.464-1.167 1.17-2.467-2.48-2.48 2.48-1.17-1.17L6.838 8z"
  />
</Icon>
`;

exports[`CrossIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.837 8l-2.45-2.464 1.17-1.17 2.45 2.464 2.465-2.465 1.17 1.17L9.162 8l2.48 2.464-1.167 1.17-2.467-2.48-2.48 2.48-1.17-1.17L6.838 8z"
  />
</Icon>
`;

exports[`CrossIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M9.414 8l6.364 6.364-1.414 1.414L8 9.414l-6.364 6.364-1.414-1.414L6.586 8 .222 1.636 1.636.222 8 6.586 14.364.222l1.414 1.414L9.414 8z"
  />
</Icon>
`;

exports[`CrossIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.837 8l-2.45-2.464 1.17-1.17 2.45 2.464 2.465-2.465 1.17 1.17L9.162 8l2.48 2.464-1.167 1.17-2.467-2.48-2.48 2.48-1.17-1.17L6.838 8z"
  />
</Icon>
`;

exports[`CrossIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.837 8l-2.45-2.464 1.17-1.17 2.45 2.464 2.465-2.465 1.17 1.17L9.162 8l2.48 2.464-1.167 1.17-2.467-2.48-2.48 2.48-1.17-1.17L6.838 8z"
  />
</Icon>
`;

exports[`CrossIcon [common] example testing should match snapshot(s) for 2.clickable 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M9.414 8l6.364 6.364-1.414 1.414L8 9.414l-6.364 6.364-1.414-1.414L6.586 8 .222 1.636 1.636.222 8 6.586 14.364.222l1.414 1.414L9.414 8z"
  />
</Icon>
`;

exports[`CrossIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.837 8l-2.45-2.464 1.17-1.17 2.45 2.464 2.465-2.465 1.17 1.17L9.162 8l2.48 2.464-1.167 1.17-2.467-2.48-2.48 2.48-1.17-1.17L6.838 8z"
  />
</Icon>
`;

exports[`CrossIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.837 8l-2.45-2.464 1.17-1.17 2.45 2.464 2.465-2.465 1.17 1.17L9.162 8l2.48 2.464-1.167 1.17-2.467-2.48-2.48 2.48-1.17-1.17L6.838 8z"
  />
</Icon>
`;

exports[`CrossIcon [common] example testing should match snapshot(s) for 3.disabled 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrossIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M9.414 8l6.364 6.364-1.414 1.414L8 9.414l-6.364 6.364-1.414-1.414L6.586 8 .222 1.636 1.636.222 8 6.586 14.364.222l1.414 1.414L9.414 8z"
  />
</Icon>
`;
